tests/testcases/errors/BCE0095-2.boo
"""
BCE0095-2.boo(7,6): BCE0095: No such label 'label'.
"""
a = def ():
	:label

goto label

